# Testudog

./: CMakeLists.txt  README.md  package.xml
circle_calculation/: Circle_calculation.py
config/: joint_names_testudog.yaml  rviz_config.rviz  testudog_controller.yaml  testudog_controller_position.yaml
controller/include/testudog/: testudog.h
controller/output/: main
controller/src/: main.cpp  main_plan.cpp  tempCodeRunnerFile  test  test.cpp  testudog  testudog.cpp
launch/: competition_arena.world  display.launch  enpm661_sim.launch  gazebo.launch  ref.launch  testudog_launch.launch  testudog_planning.launch
rrtstar/: map.world  rrtstar.py
sim2real/: motorcontrol.py
sim2real/motor_driver/: canmotorlib.py
tf_transfer/src/: main.cpp
urdf/: testudog.urdf
